==> micropython/micropython/ports/silabs/common-hal/_bleio/Connection.c <==
#include <stdio.h>
#include <string.h>
#include "py/gc.h"
#include "py/objlist.h"
#include "py/objstr.h"
#include "py/qstr.h"
#include "py/runtime.h"
#include "shared-bindings/_bleio/Connection.h"
#include "shared-bindings/_bleio/Adapter.h"
#include "shared-bindings/_bleio/Attribute.h"
#include "shared-bindings/_bleio/Characteristic.h"
#include "shared-bindings/_bleio/Service.h"
#include "shared-bindings/_bleio/UUID.h"
#include "shared-bindings/_bleio/__init__.h"
#include "shared-module/_bleio/Characteristic.h"
#include "shared/runtime/interrupt_char.h"
#include "supervisor/shared/tick.h"
#include "supervisor/serial.h"
#define DISCOVERY_TIMEOUT_MS 10000

void common_hal_bleio_connection_disconnect(bleio_connection_internal_t *self) {
    sl_bt_connection_close(self->conn_handle);
}

mp_obj_tuple_t *common_hal_bleio_connection_discover_remote_services(
    bleio_connection_obj_t *self,
    mp_obj_t service_uuids_whitelist) {

    EventBits_t ux_bits;
    mp_obj_iter_buf_t iter_buf;
    mp_obj_t iterable;
    mp_obj_t uuid_obj;
    mp_obj_tuple_t *services_tuple;
    sl_status_t sc = SL_STATUS_FAIL;
    bleio_uuid_obj_t *uuid;
    uint8_t uuid16_value[2];

    uint64_t start_ticks = supervisor_ticks_ms64();
    uint64_t current_ticks = start_ticks;

    xdiscovery_event = xEventGroupCreate();
    if (xdiscovery_event != NULL) {
        xEventGroupClearBits(xdiscovery_event,1 << 0);
    }
    self->connection->remote_service_list = mp_obj_new_list(0, NULL);
    bleio_connection_ensure_connected(self);
    if (NULL == self->connection->remote_service_list) {
        mp_raise_bleio_BluetoothError(
            translate("Create new remote service list fail."));
        return mp_const_none;
    }
    vTaskDelay(500 / portTICK_PERIOD_MS);

    if (service_uuids_whitelist == mp_const_none) {

        sc = sl_bt_gatt_discover_primary_services(self->connection->conn_handle);
        if (SL_STATUS_OK != sc) {
            mp_raise_bleio_BluetoothError(translate("Discover uuid fail."));
            return mp_const_none;
        }

        while (current_ticks - start_ticks <= DISCOVERY_TIMEOUT_MS) {

            if (xdiscovery_event != NULL) {
                ux_bits = xEventGroupWaitBits(
                    xdiscovery_event,
                    1 << 0,
                        pdTRUE,pdFALSE,
                        DISCOVERY_TIMEOUT_MS / portTICK_PERIOD_MS);

                if ((ux_bits & (1 << 0)) == (1 << 0)) {
                    break;
                }
            }
            current_ticks = supervisor_ticks_ms64();
            // Allow user to break out of a timeout with a KeyboardInterrupt.
            if (mp_hal_is_interrupted()) {
                break;
            }
        }

    } else {

        iterable = mp_getiter(service_uuids_whitelist, &iter_buf);
        while ((uuid_obj = mp_iternext(iterable)) != MP_OBJ_STOP_ITERATION) {
            if (!mp_obj_is_type(uuid_obj, &bleio_uuid_type)) {
                mp_raise_TypeError(
                    translate("non-UUID found in service_uuids_whitelist"));
            }
            uuid = MP_OBJ_TO_PTR(uuid_obj);

            if (BLE_UUID_TYPE_16 == uuid->efr_ble_uuid.uuid.type) {
                uuid16_value[0] = uuid->efr_ble_uuid.uuid16.value & 0xff;
                uuid16_value[1] = uuid->efr_ble_uuid.uuid16.value >> 8;
                sc = sl_bt_gatt_discover_primary_services_by_uuid(
                    self->connection->conn_handle,2,uuid16_value);

            } else if (BLE_UUID_TYPE_128 == uuid->efr_ble_uuid.uuid.type) {
                sc = sl_bt_gatt_discover_primary_services_by_uuid(
                    self->connection->conn_handle,
                    16,
                    uuid->efr_ble_uuid.uuid128.value);
            }

            if (SL_STATUS_OK != sc) {
                mp_raise_bleio_BluetoothError(translate("Discover fail."));
                return mp_const_none;
            }

            while (current_ticks - start_ticks <= DISCOVERY_TIMEOUT_MS) {

                if (xdiscovery_event != NULL) {
                    ux_bits = xEventGroupWaitBits(
                        xdiscovery_event,
                        1 << 0,
                            pdTRUE,
                            pdFALSE,
                            DISCOVERY_TIMEOUT_MS / portTICK_PERIOD_MS);

                    if ((ux_bits & (1 << 0)) == (1 << 0)) {
                        break;
                    }
                }
                current_ticks = supervisor_ticks_ms64();
                if (mp_hal_is_interrupted()) {
                    break;
                }
            }
        }
    }

    vEventGroupDelete(xdiscovery_event);
    services_tuple = mp_obj_new_tuple(self->connection->remote_service_list->len,
        self->connection->remote_service_list->items);

    if (NULL == services_tuple) {
        mp_raise_ValueError(translate("Create new service tuple fail."));
        return mp_const_none;
    }
    return services_tuple;
}
